--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ body{
 }
 /* sidebar */
 .sidebar{
-    height: 90vh;
+    height: 92vh;
     background-color: #2a2a2a;
     border: 1px solid #3a3a3a;
     border-radius: 15px;
@@ -375,6 +375,7 @@ p{
     }
 
     .sidebar{
+        /* align-items: center; */
         position: static;
         height: auto;
     }
@@ -396,4 +397,5 @@ p{
         justify-content: center;
         gap: 40px;
     }
+    
 }
